--- a/exporter/package.json
+++ b/exporter/package.json
@@ -7,13 +7,17 @@
     "format:check": "prettier --check \"src/*.ts\"",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"src/*.ts\"",
-    "start": "bun run src/start.ts"
+    "start": "bun run src/start.ts",
+    "test": "jest",
+    "test:dev": "jest --watch"
   },
   "dependencies": {
+    "bun-types": "^1.1.20",
     "ioredis": "^5.4.1"
   },
   "devDependencies": {
-    "@types/bun": "latest",
+    "@types/bun": "^1.1.6",
+    "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "eslint": "^6.8.0",
@@ -22,8 +26,21 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
-    "ts-node": "^10.9.2",
+    "jest": "^27.0.3",
     "prettier": "^2.1.2",
+    "ts-jest": "^27.0.2",
+    "ts-node": "^10.9.2",
     "typescript": "^4.7.4"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "globals": {
+      "ts-jest": {
+        "diagnostics": {
+          "warnOnly": true
+        }
+      }
+    },
+    "testEnvironment": "node"
   }
 }
