--- a/.github/workflows/push-exporter.yml
+++ b/.github/workflows/push-exporter.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           username: r2wireless
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Push 
         uses: docker/build-push-action@v5
         with:
