--- a/exporter/Dockerfile
+++ b/exporter/Dockerfile
@@ -3,7 +3,7 @@ FROM oven/bun:1.1.10-slim
 WORKDIR /usr/src/app
 
 COPY package.json bun.lockb ./
-RUN bun install
+RUN bun install --frozen-lockfile
 COPY . .
 
 ENV NODE_ENV production
