--- a/.github/workflows/push-exporter.yml
+++ b/.github/workflows/push-exporter.yml
@@ -14,7 +14,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: r2wireless
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Push 
