--- a/exporter/package.json
+++ b/exporter/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@types/bun": "^1.1.6",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "eslint": "^6.8.0",
@@ -26,9 +26,10 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^27.0.3",
+    "jest": "^29.7.0",
     "prettier": "^2.1.2",
-    "ts-jest": "^27.0.2",
+    "semantic-release": "^24.0.0",
+    "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^4.7.4"
   },
