--- a/.github/workflows/push-exporter.yml
+++ b/.github/workflows/push-exporter.yml
@@ -11,13 +11,14 @@ jobs:
         with:
           node-version: "16"
       - name: Install dependencies
-        run: npm install
+        run: bun install
       - name: Run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release
 
   push-docker:
+    needs: release
     runs-on: ubuntu-20.04
     defaults:
       run:
