--- a/.github/workflows/push-exporter.yml
+++ b/.github/workflows/push-exporter.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "16"
+      - uses: oven-sh/setup-bun@v2
       - name: Install dependencies
         run: bun install
       - name: Run semantic-release
