--- a/.github/workflows/push-exporter.yml
+++ b/.github/workflows/push-exporter.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "16"
+      - uses: oven-sh/setup-bun@v2
+      - name: Install dependencies
+        run: bun install
       - name: Run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
