--- a/.github/workflows/push-exporter.yml
+++ b/.github/workflows/push-exporter.yml
@@ -5,6 +5,9 @@ on: [push]
 jobs:
   release:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./exporter
     steps:
       - uses: actions/checkout@v2
       - uses: oven-sh/setup-bun@v2
