--- a/.github/workflows/push-exporter.yml
+++ b/.github/workflows/push-exporter.yml
@@ -10,6 +10,9 @@ jobs:
         working-directory: ./exporter
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.11.0'
       - uses: oven-sh/setup-bun@v2
       - name: Install dependencies
         run: bun install
