--- a/exporter/package.json
+++ b/exporter/package.json
@@ -28,6 +28,13 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^29.7.0",
     "prettier": "^2.1.2",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.5",
+    "@semantic-release/npm": "^9.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "semantic-release": "^24.0.0",
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
