--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,7 +23,7 @@ jobs:
       # Semantic release requires node to be installed
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.11.0'
+          node-version: "20.11.0"
       - name: Run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
