--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "bun-types": "^1.1.20",
-    "ioredis": "^5.4.1"
+    "ioredis": "^5.4.1",
+    "pino": "^9.6.0",
+    "pino-caller": "^3.4.0",
+    "pino-pretty": "^13.0.0"
   },
   "devDependencies": {
     "@codedependant/semantic-release-docker": "^5.0.3",
